--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "react-qr-code": "^2.0.12"
   },
   "devDependencies": {
     "prisma": "^5.9.0"
