--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
     "dev": "nodemon app.js",
-    "resetDB": "node prisma/resetDB.js"
+    "resetDB": "node prisma/resetDB.js",
+    "postinstall": "prisma generate",
+    "build": "tsc"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
