--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "omise": "^0.12.1",
-    "react-qr-code": "^2.0.12"
+    "react-qr-code": "^2.0.12",
+    "multer-storage-cloudinary": "^4.0.0" // ถ้าคุณใช้ cloudinary ในการอัปโหลดไฟล์
   },
   "devDependencies": {
     "prisma": "^5.16.1"
