--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "omise": "^0.12.1",
-    "react-qr-code": "^2.0.12",
-    "multer-storage-cloudinary": "^4.0.0" 
+    "react-qr-code": "^2.0.12"
   },
   "devDependencies": {
     "prisma": "^5.16.1"
